# store_with_payment_drf

./: .env.example  README.md  pyproject.toml  run_with_reload.sh
database_backups/: release_custom.sql  release_plain.sql
store/: settings.py  urls.py
store_app/: models.py  parser_img.py  serializers.py  urls.py  views.py
store_app/migrations/: 0001_initial.py  0002_rename_produc_product.py
store_app/static/css/: common.min.121bb7180e1b90be.css  main-page-v3.min.7309e6f7f633c75b.css  main-v3.min.716ab6e5b2568b3a.css
store_app/static/css/basket/: basket-v3.min.782cbc13532e70c7.css  payment.css
store_app/static/css/popups/: productCardPopup.min.6ca2574b943416d5.css
store_app/static/js/: basket.js  catalog_basket.js  infinity_scroll.js  parser.js  payment.js  popup.js  search.js
store_app/templates/: basket.html  catalog.html  product_template.html
